--- a/themes/tempra-conflux/public/main.css
+++ b/themes/tempra-conflux/public/main.css
@@ -354,6 +354,10 @@ button.username
 	padding-left: 5px;
 	padding-right: 5px;
 }
+.action_button_right {
+	float: right;
+	border-left: solid 1px #eaeaea;
+}
 
 .simple { background-color: white; }
 .post_item:not(.simple) {
