Added basic pagination for topics. Added template functions for arithmetic. Split the "TO-DO" section of README.md into it's own file. Themes can now mark themselves as permanently disabled. Improved the BBCode Bounds Checking. Fixed a bug with the BBCode parser where part of the content at the end is cut off. is_super_admin is now a hidden flag and isn't taken into account for Staff CSS. Themes can now show a custom tag in the Theme Manager.

--- a/templates/panel-themes.html
+++ b/templates/panel-themes.html
@@ -13,6 +13,7 @@
 		</span>
 		<span style="float: right;">
 			{{if .MobileFriendly}}<span class="username" title="Mobile Friendly">📱</span>{{end}}
+			{{if .Tag}}<span class="username">{{.Tag}}</span>{{end}}
 			{{if .Active}}<span class="username">Default</span>{{else}}<a href="/panel/themes/default/{{.Name}}?session={{$.CurrentUser.Session}}" class="username">Make Default</a>{{end}}
 		</span>
 	</div>
