--- a/themes/tempra-simple/public/main.css
+++ b/themes/tempra-simple/public/main.css
@@ -315,6 +315,29 @@ button.username
 	margin-bottom: 8px;
 	background-color: #FEB7CC;
 }
+.prev_button, .next_button {
+	position: fixed;
+	top: 50%;
+	font-size: 30px;
+	border-width: 1px;
+	background-color: #FFFFFF;
+	border-style: dotted;
+	border-color: #505050;
+	padding: 0px;
+	padding-left: 5px;
+	padding-right: 5px;
+}
+
+.prev_button a, .next_button a {
+	line-height: 28px;
+	margin-top: 2px;
+	margin-bottom: 0px;
+	display: block;
+	text-decoration: none;
+	color: #505050;
+}
+.prev_button { left: 14px; }
+.next_button { right: 14px; }
 
 @media (max-width: 880px) {
 	li
