--- a/themes/cosmo-conflux/public/main.css
+++ b/themes/cosmo-conflux/public/main.css
@@ -285,14 +285,12 @@ hr { color: silver; border: 1px solid silver; }
 }
 
 /* Mostly for textareas */
-.formitem:only-child
-{
-	width: 97%;
-}
+.formitem:only-child { width: 100%; }
 .formitem textarea
 {
 	width: 100%;
 	height: 100px;
+	outline-color: #8e8e8e;
 }
 
 .tbody
@@ -590,6 +588,7 @@ blockquote p
 	padding: 0px;
     padding-left: 5px;
     padding-right: 5px;
+	z-index: 100;
 }
 
 .prev_button a, .next_button a {
@@ -889,8 +888,6 @@ blockquote p
 		from { transform: translate(0,-50px) scale(0.75); }
 		to {}
 	}
-	/*.top img { min-height: 50px !important; }
-	.top h1 { display: none; }*/
 	.right_most { margin-right: 15%; }
 	
 	#back
