--- a/themes/cosmo/public/main.css
+++ b/themes/cosmo/public/main.css
@@ -283,14 +283,12 @@ hr { color: silver; border: 1px solid silver; }
 }
 
 /* Mostly for textareas */
-.formitem:only-child
-{
-	width: 97%;
-}
+.formitem:only-child { width: 100%; }
 .formitem textarea
 {
 	width: 100%;
 	height: 100px;
+	outline-color: #8e8e8e;
 }
 
 .tbody
@@ -634,6 +632,7 @@ blockquote p
 	padding: 0px;
     padding-left: 5px;
     padding-right: 5px;
+	z-index: 100;
 }
 
 .prev_button a, .next_button a {
