--- a/themes/tempra-conflux/public/main.css
+++ b/themes/tempra-conflux/public/main.css
@@ -7,14 +7,12 @@
 body
 {
 	font-family: arial;
+	padding-bottom: 8px;
 }
 
 /* Patch for Edge */
 @supports (-ms-ime-align:auto) {
-.user_content
-{
-	font-family: Segoe UI Emoji, arial;
-}
+.user_content { font-family: Segoe UI Emoji, arial; }
 }
 
 /*.move_left{float: left;position: relative;left: 50%;}
@@ -205,14 +203,12 @@ li a
 	border: none;
 }
 /* Mostly for textareas */
-.formitem:only-child
-{
-	width: 97%;
-}
+.formitem:only-child { width: 100%; }
 .formitem textarea
 {
 	width: 100%;
 	height: 100px;
+	outline-color: #8e8e8e;
 }
 .formitem:has-child()
 {
@@ -429,6 +425,7 @@ button.username
 	padding: 0px;
 	padding-left: 5px;
 	padding-right: 5px;
+	z-index: 100;
 }
 .prev_button a, .next_button a {
 	line-height: 28px;
@@ -478,6 +475,7 @@ button.username
 	.menu_right { padding-right: 5px; }
 	.menu_create_topic { display: none;}
 	.hide_on_mobile { display: none; }
+	.prev_button, .next_button { top: auto;bottom: 5px; }
 }
 
 @media (max-width: 470px) {
