--- a/templates/panel-forums.html
+++ b/templates/panel-forums.html
@@ -1,18 +1,18 @@
 {{template "header.html" . }}
 {{template "panel-menu.html" . }}
+<script>var form_vars = {'forum-active': ['Hide','Show']};</script>
 <div class="colblock_right">
 	<div class="rowitem rowhead"><a>Forums</a></div>
 </div>
 <div class="colblock_right">
 	{{range .ItemList}}
 	<div class="rowitem editable_parent" style="font-weight: normal;{{if eq .ID 1}}border-bottom-style:solid;{{end}}">
-		<a class="editable_block" style="font-size: 20px;position:relative;top: -2px;text-transform: none;{{if not .Active}}color:#707070;{{end}}">{{.Name}}</a>
+		<a data-field="forum-name" data-type="text" class="editable_block" style="font-size: 20px;position:relative;top: -2px;text-transform: none;{{if not .Active}}color:#707070;{{end}}">{{.Name}}</a>
 		<span style="float: right;">
-			{{if not .Active}}<span class="username" style="color: black;">Hidden</span>{{end}}
-		{{if gt .ID 1}}
-			<a href="/panel/forums/edit/submit/{{.ID}}" class="username edit_field">Edit</a>
-			<a href="/panel/forums/delete/{{.ID}}?session={{$.CurrentUser.Session}}" class="username">Delete</a>
-		{{end}}
+		<span data-field="forum-active" data-type="list" class="username editable_block hide_on_zero" style="color: black;{{if .Active}}display:none;" data-value="1"{{else}}" data-value="0"{{end}}>Hidden</span>
+		{{if gt .ID 0}}<a class="username edit_fields hide_on_edit">Edit</a>
+		<a href="/panel/forums/edit/submit/{{.ID}}"><button class='username submit_edit show_on_edit' type='submit'>Update</button></a>{{end}}
+		{{if gt .ID 1}}<a href="/panel/forums/delete/{{.ID}}?session={{$.CurrentUser.Session}}" class="username">Delete</a>{{end}}
 		</span>
 	</div>
 	{{end}}
@@ -33,6 +33,17 @@
 				<option value="0">No</option>
 			</select></div>
 		</div>
+		<!--<div class="formrow">
+			<div class="formitem"><a>Preset</a></div>
+			<div class="formitem"><select name="forum-preset">
+				<option selected value="all">Everyone</option>
+				<option value="announce">Announcements</option>
+				<option value="members">Member Only</option>
+				<option value="staff">Staff Only</option>
+				<option value="admins">Admin Only</option>
+				<option value="archive">Archive</option>
+			</select></div>
+		</div>-->
 		<div class="formrow">
 			<div class="formitem"><button name="panel-button" class="formbutton">Add Forum</button></div>
 		</div>
