--- a/templates/panel-menu.html
+++ b/templates/panel-menu.html
@@ -6,5 +6,5 @@
 	{{if .CurrentUser.Perms.EditSettings}}<div class="rowitem passive"><a href="/panel/settings/">Settings</a></div>{{end}}
 	{{if .CurrentUser.Perms.ManageThemes}}<div class="rowitem passive"><a href="/panel/themes/">Themes</a></div>{{end}}
 	{{if .CurrentUser.Perms.ManagePlugins}}<div class="rowitem passive"><a href="/panel/plugins/">Plugins</a></div>{{end}}
-	<div class="rowitem passive"><a href="/forum/1">Reported Content</a></div>
+	<div class="rowitem passive"><a href="/forum/1">Reports</a></div>
 </div>
