You can now create forums with a specific permission preset. The ability to change the preset of a forum and more granular control over it's permissions is coming soon. Fixed a bug in the /forums/ route over which forums were visible.

--- a/templates/panel-forums.html
+++ b/templates/panel-forums.html
@@ -33,7 +33,7 @@
 				<option value="0">No</option>
 			</select></div>
 		</div>
-		<!--<div class="formrow">
+		<div class="formrow">
 			<div class="formitem"><a>Preset</a></div>
 			<div class="formitem"><select name="forum-preset">
 				<option selected value="all">Everyone</option>
@@ -42,8 +42,9 @@
 				<option value="staff">Staff Only</option>
 				<option value="admins">Admin Only</option>
 				<option value="archive">Archive</option>
+				<option value="custom">Custom</option>
 			</select></div>
-		</div>-->
+		</div>
 		<div class="formrow">
 			<div class="formitem"><button name="panel-button" class="formbutton">Add Forum</button></div>
 		</div>
